config: some packages were added to the project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
+    "noImplicitAny": true,
+    "strictFunctionTypes": true,
     "target": "esnext"
   },
   "exclude": ["node_modules"],
