--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@chakra-ui/theme-tools": "1.0.0",
     "@emotion/react": "11.1.1",
     "@emotion/styled": "11.0.0",
-    "framer-motion": "^2.9.4",
+    "framer-motion": "^2.9.5",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.2"
   },
   "devDependencies": {
     "@types/node": "^14.6.0",
