--- a/package.json
+++ b/package.json
@@ -9,23 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.3",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "framer-motion": "^10.9.1",
+    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-label": "^2.0.1",
+    "class-variance-authority": "^0.5.1",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.130.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.8"
+    "react-hook-form": "^7.43.8",
+    "tailwind-merge": "^1.11.0",
+    "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "^8.8.0",
+    "postcss": "^8.4.21",
     "prettier": "2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.6",
+    "tailwindcss": "^3.3.1",
     "typescript": "4.9.5"
   }
 }
