--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-label": "^2.0.1",
     "class-variance-authority": "^0.5.1",
@@ -32,6 +33,7 @@
     "postcss": "^8.4.21",
     "prettier": "2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.6",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.3.1",
     "typescript": "4.9.5"
   }
