--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "class-variance-authority": "^0.5.1",
     "clsx": "^1.2.1",
     "lucide-react": "^0.130.0",
-    "next": "13.2.4",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
