--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-checkbox": "^1.0.3",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-toast": "^1.1.4",
+    "aws-amplify": "^6.0.5",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.5.1",
     "clsx": "^1.2.1",
@@ -25,6 +26,8 @@
     "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^0.5.5",
+    "@aws-amplify/backend-cli": "^0.9.1",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
@@ -36,6 +39,6 @@
     "prettier": "2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.3.1",
-    "typescript": "4.9.5"
+    "typescript": "^5.3.2"
   }
 }
