--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.2.1",
     "lucide-react": "^0.130.0",
     "next": "^13.5.6",
+    "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.8",
